<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.sagar.smsblocker.ux.activities.ChatActivity"
    tools:showIn="@layout/activity_thread">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/holder_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/holder_sms_et"
            android:padding="0dp"
            android:background="@android:color/transparent"
            android:layout_above="@id/tv_reply_not_supported"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="0dp"
            android:layout_alignParentBottom="true">

            <!--Emoji Button-->
            <ImageButton
                android:id="@+id/btn_emoji"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="15"
                android:background="@drawable/color"
                android:visibility="gone"
                android:src="@drawable/emo" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:background="@drawable/bkg_thread__et_sendmsg"
                android:padding="0dp">

                <TextView
                    android:layout_width="24dp"
                    android:layout_height="25dp"
                    android:text="1"
                    android:id="@+id/tv_sim"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold"
                    android:background="@drawable/ic_sim_alert_white_24dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/greyA600"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"/>

                <EditText
                    android:id="@+id/et_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="150dp"
                    android:minHeight="42dp"
                    android:elevation="1dp"
                    android:layout_toStartOf="@id/tv_sim"
                    android:layout_centerInParent="true"
                    android:paddingEnd="@dimen/input_text_padding_end"
                    android:paddingStart="@dimen/input_text_padding_start"
                    android:paddingTop="@dimen/input_text_padding_top"
                    android:paddingBottom="@dimen/input_text_padding_bottom"
                    android:background="@color/transparent"
                    android:hint="@string/hint_thread__send"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"/>

            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_thread__fullpage"
                android:background="@drawable/color"
                android:elevation="1dp"
                android:padding="8dp"
                app:srcCompat="@drawable/send2" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reply_not_supported"
            android:gravity="center"
            android:alpha="0.54"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:text="@string/label_reply_not_supported"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lv_sms"
            android:layout_marginBottom="0dp"
            android:layout_above="@id/holder_sms_et"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/holder_loader">
        <com.mingle.widget.LoadingView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/loading_view"/>
    </RelativeLayout>

</RelativeLayout>
