<resources>
    <string name="app_name">Smart Messages</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_star_sms">Star SMS</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_new_thread">New Conversation</string>
    <string name="title_activity_test_main">TestMainActivity</string>

    <string name="title_contextual_thread">Select</string>
    <string name="hash">#</string>
...

    <string name="label_reply">Reply</string>
    <string name="notif_content_sent">SMS Sent</string>
    <string name="notif_sending_failed">Sending Failed</string>
    <string name="hint_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="hint_strred_sms">Starred SMS</string>
    <string name="label_reply_not_supported">Sender does not support reply</string>
    <string name="title_activity_starred_sms">Starred SMS</string>
    <string name="label_undo">Undo</string>
    <string name="label_unread_only">Unread Only</string>
    <string name="text_conversations">conversations</string>
    <string name="text_conversation">conversation</string>
...
    <string name="txt_mobile">Mobile</string>
    <string name="txt_work">Work</string>
    <string name="txt_home_fax">Home Fax</string>
    <string name="txt_work_fax">Work Fax</string>
    <string name="txt_main">Main</string>
    <string name="deleted">Deleted</string>
    <string name="txt_ok">OK</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
...
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="label_call">Call</string>
    <string name="lbl_translate">Translate</string>
    <string name="lbl_failed">Failed</string>

    <!-- Preference Test Ends-->

</resources>
