<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.sagar.smsblocker.ux.activities.NewThreadActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="center"
            android:background="@drawable/grad"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_search_contact"
                android:textSize="20sp"
                android:padding="6dp"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:inputType="textPhonetic"
                android:textColor="@color/white"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="0dp"
                android:hint="@string/hint_newthread__searchcontacts"
                android:maxLines="1"
                android:background="@drawable/color"

                android:drawableEnd="@drawable/numeric_pad_icon_24dp"
                android:drawableTint="@color/white"
                android:layout_marginTop="0dp"
                />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_new_thread" />

    <!--<android.support.design.widget.FloatingActionButton
        andridd:idid@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
